--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-  <title>Grayscale - Start Bootstrap Theme</title>
+  <title> Ryan F. Ding</title>
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
   <!-- Font Awesome icons (free version)-->
   <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -66,7 +66,7 @@
           </p>
         </div>
       </div>
-      <img class="img-fluid" src="assets/img/ipad.png" alt="..." />
+      <img class="img-fluid" src="assets/img/headshot.jpg" alt="..." />
     </div>
   </section>
   <!-- Projects-->
@@ -74,7 +74,7 @@
     <div class="container px-4 px-lg-5">
       <!-- Featured Project Row-->
       <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-        <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" alt="..." />
+        <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/promo.jpg" alt="..." />
         </div>
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
@@ -99,14 +99,15 @@
       </div>
       <!-- Project Two Row-->
       <div class="row gx-0 justify-content-center">
-        <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-02.jpg" alt="..." /></div>
+        <div class="col-lg-6"><img class="img-fluid" src="assets/img/health.jpg" alt="..." /></div>
         <div class="col-lg-6 order-lg-first">
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
-                <h4 class="text-white">Mountains</h4>
-                <p class="mb-0 text-white-50">Another example of a project with its respective description. These
-                  sections work well responsively as well!</p>
+                <h4 class="text-white">Learn more about me!</h4>
+                <a href="https://docs.google.com/document/d/16d993d3zBDsE4IIZAY7wzffoIY30agmgibu3TXlm3XM/edit?usp=sharing"> My CV, </a>
+
+		<a href="https://docs.google.com/document/d/1zKksxBVulDqTx6KTylv6lr7xqpAIFUPlDhSrpxo9O1s/edit?usp=sharing"> resume. </a>
               </div>
             </div>
           </div>
@@ -174,7 +175,7 @@
               <i class="fas fa-map-marked-alt text-primary mb-2"></i>
               <h4 class="text-uppercase m-0">Address</h4>
               <hr class="my-4 mx-auto" />
-              <div class="small text-black-50">4923 Market Street, Orlando FL</div>
+              <div class="small text-black-50">200 Irish Road, Berwyn PA</div>
             </div>
           </div>
         </div>
@@ -184,7 +185,7 @@
               <i class="fas fa-envelope text-primary mb-2"></i>
               <h4 class="text-uppercase m-0">Email</h4>
               <hr class="my-4 mx-auto" />
-              <div class="small text-black-50"><a href="#!">hello@yourdomain.com</a></div>
+              <div class="small text-black-50"><a href="#!">usatu2001@gmail.com</a></div>
             </div>
           </div>
         </div>
@@ -194,7 +195,7 @@
               <i class="fas fa-mobile-alt text-primary mb-2"></i>
               <h4 class="text-uppercase m-0">Phone</h4>
               <hr class="my-4 mx-auto" />
-              <div class="small text-black-50">+1 (555) 902-8832</div>
+              <div class="small text-black-50">+1 (484) 905-1375</div>
             </div>
           </div>
         </div>
